Fix headline visibility

--- a/css/cb-style.css
+++ b/css/cb-style.css
@@ -5928,20 +5928,26 @@
     padding: 10px;
 }
 
+.cb-header34 .content h2 {
+    color: #ffffff;
+    font-size: 30px;
+    overflow: hidden;
+    text-align: center;
+    font-weight: 300;
+}
+
 .cb-header34 .content h1 {
     color: #ffffff;
     font-size: 50px;
     overflow: hidden;
     text-align: center;
     font-weight: 300;
-    max-width: 7;
 }
 
 .cb-header34 .content p {
     color: #ffffff !important;
     font-size: 24px;
-
-    /* font-weight: 600 */
+    font-weight: 600;
     text-align: center;
 }
 
@@ -11949,7 +11955,7 @@
 }
 
 .cb-content46 .content p {
-    /* font-size: 14px */
+    font-size: 14px;
 }
 
 /* content47 */
